--- a/08_실전예제/02_naviation/03/100롤링/common.css
+++ b/08_실전예제/02_naviation/03/100롤링/common.css
@@ -30,14 +30,14 @@ body {
 }
 
 #sliderList {
-  width: 500%;
+  width: 500%; /*자식 개수 * 100*/
+  display: flex;
 }
 
 #sliderList .slider {
-  width: 20%;
+  width: 100%;
   height: 700px;
   background: no-repeat center / cover;
-  float: left;
 }
 
 #sliderList .slider1 {
@@ -114,4 +114,14 @@ body {
 #numBtn a.active {
   background-color: #009688;
   color: #fff;
+}
+#playBtn {
+position: absolute;
+bottom: 20px;
+right:20px;
+text-align: center;
+}
+#playBtn a {
+color: #fff;
+margin-left: 20px;
 }
