--- a/09_응용예제/00_네비게이션/css/common2.css
+++ b/09_응용예제/00_네비게이션/css/common2.css
@@ -36,6 +36,17 @@ body {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  
+}
+
+#header .on{
+  position: absolute;
+  width: 100%;
+  height: 50px;
+  left: 0;
+  top: 100px;
+  opacity: 0;
+  background-color: #00C3A4;
 }
 
 #header h1 {
@@ -68,32 +79,31 @@ body {
 }
 
 .depth1 {
-  width: 600px;
   line-height: 100px;
   display: flex;
   justify-content: space-between;
-  position: relative;
 }
 
-.depth1 li a {
+.depth1 >li >a {
+  display: block;
+  width: 200px;
+  text-align: center;
   color: #fff;
-  font-size: 20px;
 }
+
 
 .depth2 {
-  display: none;
-  width: 100px;
-  padding: 10px;
-  line-height: 50px;
-  transition: .5s;
-  background-color: #00C3A4;
   position: absolute;
+  display: flex;
+  top: 75px;
 }
 
 .depth2 li a {
   font-size: 16px;
-
+  padding-right: 20px;
+  color: #fff;
 }
+
 
 /* 비디오 */
 #videoWrap {
@@ -142,12 +152,8 @@ body {
     font-size: 15px;
   }
 
-  .depth1 {
-    width: 500px;
-  }
-
   .depth1 li a {
-    color: #fff;
+    width: 130px;
     font-size: 15px;
   }
 
@@ -159,10 +165,20 @@ body {
 @media screen and (max-width: 913px) {
   #gnb {
     position: absolute;
-    right: 0px;
+    right: -200px;
+    display: none;
   }
 
   .depth1 {
     flex-flow: column;
+  }
+  #slogan {
+    left: calc(50% - 160px);
+  }
+  #slogan h2 {
+    font-size: 55px;
+  }
+  #slogan p {
+    font-size: 25px;
   }
 }
