비디오 제어

--- a/09_응용예제/00_네비게이션/css/common3.css
+++ b/09_응용예제/00_네비게이션/css/common3.css
@@ -153,6 +153,20 @@ a {
   height: auto;
 }
 
+#videoBtn {
+  position: absolute;
+  width: 150px;
+  height: 40px;
+  top: 600px;
+  left: calc(50% - 75px);
+  border: 1px solid #fff;
+  color: #fff;
+  text-transform: uppercase;
+  background: transparent;
+  cursor: pointer;
+  transition: .5s;
+}
+
 /* 슬로건 */
 #slogan {
   position: absolute;
