--- a/스크롤관련/css/common2.css
+++ b/스크롤관련/css/common2.css
@@ -31,6 +31,7 @@ a {
   background: #ffecd4;
   text-align: center;
   padding-top: 40vh;
+  box-sizing: border-box;
 }
 
 #header h1 {
@@ -52,9 +53,18 @@ a {
   width: 100%;
   line-height: 50px;
   background: rgba(255, 255, 255, 0.8);
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
+}
+
+#gnb.on {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+#gnb.on a {
+  color: #fff;
 }
 
 #gnb ul {
