--- a/원페이지스크롤관련/css/common.css
+++ b/원페이지스크롤관련/css/common.css
@@ -30,11 +30,12 @@ a {
 header {
   width : 300px;
   height: 100vh;
-  background: #000;
+  background: rgba(0, 0, 0, 0.7);
   padding: 20px;
   box-sizing: border-box;
   text-align: center;
   position: fixed;
+  z-index: 100;
 }
 
 header h1 {
@@ -60,12 +61,13 @@ header nav ul li.on {
 /* 섹션 */
 
 section {
-  width: calc(100% - 300px);
+  width: 100%;
   height: 100vh;
   position: relative;
-  right: -300px;
   top: 0;
   background: no-repeat center / cover;
+  padding-left: 300px;
+  box-sizing: border-box;
 }
 
 section h2 {
